--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,14 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.1.9:3306/seller?characterEncoding=utf-8
+    url: jdbc:mysql://192.168.1.11:3306/seller?characterEncoding=utf-8
     username: root
     password: 123456
   jpa:
     show-sql: true
+  jackson:
+    default-property-inclusion: non_null
 server:
   servlet:
     context-path: /sell
+
