--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,11 @@
 #    console: "%d - %msg %n"
 #  file:
 #    name: /mfw_data/imooc_log/seller.log
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.1.11:3306/seller?characterEncoding=utf-8
+    url: jdbc:mysql://192.168.1.9:3306/seller?characterEncoding=utf-8
     username: root
     password: 123456
   jpa:
@@ -16,4 +17,4 @@ spring:
 server:
   servlet:
     context-path: /sell
-
+  port: 9088
