--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.1.9:3306/seller?characterEncoding=utf-8
+    url: jdbc:mysql://192.168.1.8:3306/seller?characterEncoding=utf-8
     username: root
     password: 123456
   jpa:
@@ -18,3 +18,7 @@ server:
   servlet:
     context-path: /sell
   port: 9088
+
+wechat:
+  mpAppId: wx0a8f8e9e240e1b01
+  mpAppSecret: 209b93beada12f8174ffecf2246acf62
